tests/schemas/error/010_missing_impl_protocol.fcp
version: "3"

struct S1 {
    field1 @0 : MissingType,
}

device Device {
    protocol can {
        impl {
            some_field: 1,
        },
    },
}
